[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/player/weapons/assets/ball.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/weapons/bullet.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/cards/audio/gun.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[sub_resource type="CircleShape2D" id=3]
radius = 210.623

[node name="bullet" type="Node2D"]

[node name="bullet" type="KinematicBody2D" parent="."]
z_index = -1
collision_layer = 8
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="bullet"]
modulate = Color( 0.623529, 0.623529, 0.623529, 1 )
light_mask = 4
position = Vector2( -4.17233e-07, -4.17233e-07 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="bullet" type="Area2D" parent="bullet"]
collision_layer = 24
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet/bullet"]
shape = SubResource( 2 )

[node name="attractionzone" type="Area2D" parent="bullet"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet/attractionzone"]
rotation = 0.785398
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="bullet"]

[node name="gunsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -4.0
autoplay = true
bus = "SFX"

[connection signal="area_entered" from="bullet/bullet" to="bullet" method="_on_bullet_area_entered"]
[connection signal="body_entered" from="bullet/bullet" to="bullet" method="_on_bullet_body_entered"]
[connection signal="area_entered" from="bullet/attractionzone" to="bullet" method="_on_attractionzone_area_entered"]
[connection signal="area_exited" from="bullet/attractionzone" to="bullet" method="_on_attractionzone_area_exited"]
[connection signal="screen_exited" from="bullet/VisibilityNotifier2D" to="bullet" method="_on_VisibilityNotifier2D_screen_exited"]
